fixed text alignment

--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ main {
   background-color: rgba(126, 46, 132, .25);
   word-wrap: break-word;
   word-break: break-all;
-  flex-wrap: wrap; 
+  text-align: right;
 }
 
 .container-buttons {
